--- a/frontend/themes/vaadin-chat/styles.css
+++ b/frontend/themes/vaadin-chat/styles.css
@@ -1,1 +1,14 @@
-@import url('./main-layout.css');
+.main-view h1 {
+    margin: 0;
+    padding: 16px;
+    width: 100%;
+}
+
+.message-list {
+    overflow-y: scroll;
+    width: 100%;
+}
+
+.message-list p{
+    width: 100%;
+}
